newtype-tools/tests/trybuild/newtype_attribute.stderr
error: expected `#[newtype(NewtypeKind)]`
  --> tests/trybuild/newtype_attribute.rs:11:5
   |
11 |     #[newtype_tools::newtype]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `newtype_tools::newtype` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `#[newtype(NewtypeKind)]`
  --> tests/trybuild/newtype_attribute.rs:16:5
   |
16 |     #[newtype_tools::newtype()]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `newtype_tools::newtype` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected 'Amount' or 'Id'
  --> tests/trybuild/newtype_attribute.rs:21:30
   |
21 |     #[newtype_tools::newtype(InvalidKind)]
   |                              ^^^^^^^^^^^

error: expected `struct Newtype(inner_type)`
  --> tests/trybuild/newtype_attribute.rs:27:19
   |
27 |     struct Oranges();
   |                   ^^

error: expected one of: `struct`, `enum`, `union`
  --> tests/trybuild/newtype_attribute.rs:32:5
   |
32 |     fn not_a_struct() {}
   |     ^^

error: expected `#[newtype(NewtypeKind)]`
  --> tests/trybuild/newtype_attribute.rs:36:30
   |
36 |     #[newtype_tools::newtype(Amount, Amount)]
   |                              ^^^^^^
